@@ -2,16 +2,19 @@ package org.cloudfoundry.identity.uaa.zone;
 
 import org.cloudfoundry.identity.uaa.audit.event.EntityDeletedEvent;
 import org.cloudfoundry.identity.uaa.client.InvalidClientDetailsException;
+import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.error.UaaException;
+import org.cloudfoundry.identity.uaa.logging.SanitizedLogFactory;
+import org.cloudfoundry.identity.uaa.provider.ClientAlreadyExistsException;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
+import org.cloudfoundry.identity.uaa.provider.NoSuchClientException;
 import org.cloudfoundry.identity.uaa.provider.UaaIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.saml.SamlKey;
 import org.cloudfoundry.identity.uaa.scim.ScimGroup;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupProvisioning;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.ApplicationEventPublisherAware;
@@ -22,10 +25,7 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.provider.ClientAlreadyExistsException;
-import org.springframework.security.oauth2.provider.ClientDetails;
-import org.springframework.security.oauth2.provider.NoSuchClientException;
-import org.springframework.security.oauth2.provider.client.BaseClientDetails;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 import org.springframework.validation.BindingResult;
@@ -45,6 +45,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static java.util.Optional.ofNullable;
@@ -62,7 +63,8 @@ import static org.springframework.web.bind.annotation.RequestMethod.PUT;
 @RequestMapping("/identity-zones")
 public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
 
-    private static final Logger logger = LoggerFactory.getLogger(IdentityZoneEndpoints.class);
+    private static final SanitizedLogFactory.SanitizedLog logger = SanitizedLogFactory.getLog(IdentityZoneEndpoints.class);
+    private static final String ID_SUBDOMAIN_LOGGING = "[{}] subdomain [{}]";
 
     private final IdentityZoneProvisioning zoneDao;
     private final IdentityProviderProvisioning idpDao;
@@ -74,11 +76,11 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
     private ApplicationEventPublisher publisher;
 
     public IdentityZoneEndpoints(final IdentityZoneProvisioning zoneDao,
-                                 final @Qualifier("identityProviderProvisioning") IdentityProviderProvisioning idpDao,
-                                 final IdentityZoneEndpointClientRegistrationService clientRegistrationService,
-                                 final ScimGroupProvisioning groupProvisioning,
-                                 final IdentityZoneValidator validator,
-                                 final MessageSource messageSource) {
+            final @Qualifier("identityProviderProvisioning") IdentityProviderProvisioning idpDao,
+            final IdentityZoneEndpointClientRegistrationService clientRegistrationService,
+            final ScimGroupProvisioning groupProvisioning,
+            final IdentityZoneValidator validator,
+            final MessageSource messageSource) {
         super();
         this.zoneDao = zoneDao;
         this.idpDao = idpDao;
@@ -97,7 +99,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
     @RequestMapping(value = "{id}", method = GET)
     public IdentityZone getIdentityZone(@PathVariable String id) {
         List<IdentityZone> result = filterForCurrentZone(Collections.singletonList(zoneDao.retrieveIgnoreActiveFlag(id)));
-        if (result.size() == 0) {
+        if (result.isEmpty()) {
             throw new ZoneDoesNotExistsException("Zone does not exist or is not accessible.");
         }
         return removeKeys(result.get(0));
@@ -105,7 +107,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
 
     protected IdentityZone removeKeys(IdentityZone identityZone) {
         if (identityZone.getConfig() != null && identityZone.getConfig().getTokenPolicy() != null) {
-            identityZone.getConfig().getTokenPolicy().setKeys(null);
+            identityZone.getConfig().getTokenPolicy().setKeyInformation(null);
         }
         if (identityZone.getConfig() != null && identityZone.getConfig().getSamlConfig() != null) {
             identityZone.getConfig().getSamlConfig().setPrivateKeyPassword(null);
@@ -191,9 +193,12 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
         }
         IdentityZone previous = IdentityZoneHolder.get();
         try {
-            logger.debug("Zone - creating id[" + body.getId() + "] subdomain[" + body.getSubdomain() + "]");
+            logger.debug("Zone - creating id[{}] subdomain[{}]",
+                    UaaStringUtils.getCleanedUserControlString(body.getId()),
+                    UaaStringUtils.getCleanedUserControlString(body.getSubdomain())
+            );
             IdentityZone created = zoneDao.create(body);
-            logger.debug("Zone - created id[" + created.getId() + "] subdomain[" + created.getSubdomain() + "]");
+            logger.debug("Zone - created id " + ID_SUBDOMAIN_LOGGING, created.getId(), created.getSubdomain());
             IdentityZoneHolder.set(created);
             IdentityProvider defaultIdp = new IdentityProvider();
             defaultIdp.setName(OriginKeys.UAA);
@@ -204,7 +209,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
             idpDefinition.setPasswordPolicy(null);
             defaultIdp.setConfig(idpDefinition);
             idpDao.create(defaultIdp, created.getId());
-            logger.debug("Created default IDP in zone - created id[" + created.getId() + "] subdomain[" + created.getSubdomain() + "]");
+            logger.debug("Created default IDP in zone - created id " + ID_SUBDOMAIN_LOGGING, created.getId(), created.getSubdomain());
             createUserGroups(created);
             return new ResponseEntity<>(removeKeys(created), CREATED);
         } finally {
@@ -216,9 +221,9 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
         UserConfig userConfig = zone.getConfig().getUserConfig();
         if (userConfig != null) {
             List<String> defaultGroups = ofNullable(userConfig.getDefaultGroups()).orElse(Collections.emptyList());
-            logger.debug(String.format("About to create default groups count: %s for subdomain: %s", defaultGroups.size(), zone.getSubdomain()));
+            logger.debug("About to create default groups count: %s for subdomain: %s".formatted(defaultGroups.size(), zone.getSubdomain()));
             for (String group : defaultGroups) {
-                logger.debug(String.format("Creating zone default group: %s for subdomain: %s", group, zone.getSubdomain()));
+                logger.debug("Creating zone default group: %s for subdomain: %s".formatted(group, zone.getSubdomain()));
                 groupProvisioning.createOrGet(
                         new ScimGroup(
                                 null,
@@ -262,10 +267,22 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
             body.setId(id);
             body = validator.validate(body, IdentityZoneValidator.Mode.MODIFY);
 
-            logger.debug("Zone - updating id[" + id + "] subdomain[" + body.getSubdomain() + "]");
+            UserConfig userConfig = body.getConfig().getUserConfig();
+            if (!userConfig.allGroupsAllowed()) {
+                Set<String> allowedGroups = userConfig.resultingAllowedGroups();
+                // check for groups which would be not allowed after the update
+                if (groupProvisioning.retrieveAll(body.getId()).stream().anyMatch(g -> !allowedGroups.contains(g.getDisplayName()))) {
+                    throw new UnprocessableEntityException("The identity zone user configuration contains not-allowed groups.");
+                }
+            }
+
+            logger.debug("Zone - updating id[{}] subdomain[{}]",
+                    UaaStringUtils.getCleanedUserControlString(id),
+                    UaaStringUtils.getCleanedUserControlString(body.getSubdomain())
+            );
             IdentityZone updated = zoneDao.update(body);
             IdentityZoneHolder.set(updated);
-            logger.debug("Zone - updated id[" + updated.getId() + "] subdomain[" + updated.getSubdomain() + "]");
+            logger.debug("Zone - updated id " + ID_SUBDOMAIN_LOGGING, updated.getId(), updated.getSubdomain());
             createUserGroups(updated);
             return new ResponseEntity<>(removeKeys(updated), OK);
         } catch (InvalidIdentityZoneDetailsException ex) {
@@ -281,7 +298,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
         if (newZone.getConfig() != null) {
             if (newZone.getConfig().getTokenPolicy() != null) {
                 if (newZone.getConfig().getTokenPolicy().getKeys() == null || newZone.getConfig().getTokenPolicy().getKeys().isEmpty()) {
-                    newZone.getConfig().getTokenPolicy().setKeys(existingZone.getConfig().getTokenPolicy().getKeys());
+                    newZone.getConfig().getTokenPolicy().setKeyInformation(existingZone.getConfig().getTokenPolicy().getKeys());
                 }
             }
             if (newZone.getConfig().getSamlConfig() != null) {
@@ -318,7 +335,15 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
             IdentityZone zone = zoneDao.retrieveIgnoreActiveFlag(id);
             // ignore the id in the body, the id in the path is the only one that matters
             IdentityZoneHolder.set(zone);
-            if (publisher != null && zone != null) {
+
+            /* reject deletion if an IdP with alias exists in the zone - checking for users with alias is not required
+             * here, since they can only exist if their origin IdP has an alias as well */
+            final boolean idpWithAliasExists = idpDao.idpWithAliasExistsInZone(zone.getId());
+            if (idpWithAliasExists) {
+                return new ResponseEntity<>(UNPROCESSABLE_ENTITY);
+            }
+
+            if (publisher != null) {
                 publisher.publishEvent(new EntityDeletedEvent<>(zone, SecurityContextHolder.getContext().getAuthentication(), IdentityZoneHolder.getCurrentZoneId()));
                 logger.debug("Zone - deleted id[" + zone.getId() + "]");
                 return new ResponseEntity<>(removeKeys(zone), OK);
@@ -332,7 +357,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
 
     @RequestMapping(method = POST, value = "{identityZoneId}/clients")
     public ResponseEntity<? extends ClientDetails> createClient(
-            @PathVariable String identityZoneId, @RequestBody BaseClientDetails clientDetails) {
+            @PathVariable String identityZoneId, @RequestBody UaaClientDetails clientDetails) {
         if (identityZoneId == null) {
             throw new ZoneDoesNotExistsException(identityZoneId);
         }
@@ -353,7 +378,7 @@ public class IdentityZoneEndpoints implements ApplicationEventPublisherAware {
     }
 
     private ClientDetails removeSecret(ClientDetails createdClient) {
-        BaseClientDetails response = (BaseClientDetails) createdClient;
+        UaaClientDetails response = (UaaClientDetails) createdClient;
         response.setClientSecret(null);
         return response;
     }
